# TT_PostProcessing_Layer

./: .env.example  .gitignore  Pipeline-Problemi-Soluzioni-Contratti.md  pyproject.toml  requirements.txt  run_postprocessing.py
doc/: Brainstorming-Thread-Classificaro-Mail-v2.md  Brainstorming-Thread-Classificator-Mail-v3.md  PROGRESSION.md  post-processing-enrichment-layer.md
inference_layer_i_o/: LLM_LayerOutput.json  pipeline_last_output.json  postprocessing_result.json
src/config/: constants.py  schemas.py  settings.py
src/dictionary/: __init__.py  observations.py
src/entity_extraction/: __init__.py  lexicon_enhancer.py  merger.py  ner_extractor.py  pipeline.py  regex_matcher.py
src/models/: email_document.py  entity.py  observation.py  pipeline_version.py  triage_io.py  validation.py
src/postprocessing/: confidence.py  customer_status.py  keyword_resolver.py  metrics.py  output_builder.py  pipeline.py  priority_scorer.py  redis_barrier.py  validation.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_confidence.py  test_customer_status.py  test_entity_extraction.py  test_keyword_resolver.py  test_metrics.py  test_observations.py  test_output_builder.py  test_priority_scorer.py  test_redis_barrier.py  test_redis_barrier_and_models.py  test_validation.py
